fix(tree): set overflow for tree

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,7 @@ $reverse: false;
 
 
 .tree {
+  overflow: auto;
   @if $reverse {
     transform: rotate(180deg);
     transform-origin: 50%;
